fixed main-map-container alignment

--- a/css/style.css
+++ b/css/style.css
@@ -126,7 +126,7 @@ span.psw {
     display: flex;
     align-items: center;
     justify-content: center;
-    margin: 10px 18% 10px 18%;
+    margin: 0px 0% 0px 0%;
     border: solid #071f05;
     border-radius: 10px;
     padding: 10px;
@@ -150,7 +150,15 @@ span.psw {
     width: 400px;
 } */
 
-.text select {
+/* .text select {
+    color: #CD5C5C;
+    padding-right: 20px;
+    font-size: 30px;
+    text-align: right;
+    display: inline-flexbox;
+} */
+
+#locations-select {
     color: #CD5C5C;
     padding-right: 20px;
     font-size: 30px;
